[TBD-4141] Fix slf4j-api dependency declaration for Kafka 0.10.0

--- a/main/plugins/org.talend.libraries.apache.kafka/plugin.xml
+++ b/main/plugins/org.talend.libraries.apache.kafka/plugin.xml
@@ -76,7 +76,7 @@
             context="plugin:org.talend.libraries.apache.kafka"
             id="slf4j-api-1.7.21.jar"
             name="slf4j-api-1.7.21.jar" 
-            mvn_uri="mvn:org.talend.libraries/slf4j-api-1.7.21.jar/6.3.0"/>
+            mvn_uri="mvn:org.talend.libraries/slf4j-api-1.7.21/6.3.0"/>
         <libraryNeeded
             context="plugin:org.talend.libraries.apache.kafka"
             id="jopt-simple-4.9.jar"
