TBD-4312 fixed - Review the AWS dependencies

--- a/main/plugins/org.talend.hadoop.distribution.cdh580/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh580/plugin.xml
@@ -856,8 +856,8 @@
             <library id="spark-streaming-kinesis-asl-assembly_2.10-1.6.0.jar"/>
             <library id="amazon-kinesis-client-1.2.1.jar"/>
             <library id="aws-java-sdk-kinesis-1.9.16.jar"/>
-            <library id="aws-java-sdk-core-1.9.16.jar"/>            
-            <library id="aws-java-sdk-1.7.4.jar"/>            
+            <library id="aws-java-sdk-1.7.4.jar"/>
+            <library id="aws-java-sdk-dynamodb-1.9.16.jar"/>                         
             <library id="aws-java-sdk-cloudwatch-1.9.16.jar"/>            
             <library id="joda-time-2.7.jar"/>            
         </libraryNeededGroup>
