Support the for tDataprepRun on CDH 5.5, 5.6 and 5.7

--- a/main/plugins/org.talend.hadoop.distribution.cdh550/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.cdh550/plugin.xml
@@ -230,8 +230,8 @@
         <libraryNeeded
             context="plugin:org.talend.hadoop.distribution.cdh550"
             id="spark-assembly-cdh5.5.2"
-            name="talend-spark-assembly-1.5.0-cdh5.5.2-hadoop2.6.0-cdh5.5.2-with-hive.jar"
-            mvn_uri="mvn:org.talend.libraries/talend-spark-assembly-1.5.0-cdh5.5.2-hadoop2.6.0-cdh5.5.2-with-hive/6.1.0">
+            name="talend-spark-assembly-1.5.0-cdh5.5.2-hadoop2.6.0-with-hive-07122016.jar"
+            mvn_uri="mvn:org.talend.libraries/talend-spark-assembly-1.5.0-cdh5.5.2-hadoop2.6.0-with-hive-07122016/6.1.0">
         </libraryNeeded>
         
         <libraryNeeded
@@ -779,9 +779,9 @@
              <library id="spark-assembly-cdh5.5.2" />
              <library id="jersey-server-1.14.jar" />
              <library id="jersey-servlet-1.14.jar" />
-             <library id="jackson-databind-2.2.3.jar" />
-             <library id="jackson-core-2.2.3.jar" />
-             <library id="jackson-annotations-2.2.3.jar" />
+             <library id="jackson-databind-2.3.1.jar" />
+             <library id="jackson-core-2.3.1.jar" />
+             <library id="jackson-annotations-2.3.0.jar" />
              <library id="snappy-java-1.0.4.1.jar"/>
              <library id="parquet-hadoop-bundle-cdh5.5.2"/>
         </libraryNeededGroup>
