--- a/pom.xml
+++ b/pom.xml
@@ -49,7 +49,7 @@
         <module>main/features/org.talend.tos.bigdata.designer.feature</module>
         <module>main/features/org.talend.tos.bigdata.libraries.feature</module>
         <module>main/features/org.talend.tos.bigdata.repository.feature</module>
-        <module>main/features/org.talend.hadoop.distribution.feature</module>       
+        <module>main/features/org.talend.hadoop.distribution.feature</module>
         <module>main/plugins/org.talend.hadoop.distribution</module>
         <module>main/plugins/org.talend.hadoop.distribution.apache100</module>
         <module>main/plugins/org.talend.hadoop.distribution.cdh4mr1</module>
@@ -63,7 +63,7 @@
         <module>main/plugins/org.talend.hadoop.distribution.cdh570</module>
         <module>main/plugins/org.talend.hadoop.distribution.cdh570.jars</module>
         <module>main/plugins/org.talend.hadoop.distribution.cdh580</module>
-        <module>main/plugins/org.talend.hadoop.distribution.cdh580.jars</module>                
+        <module>main/plugins/org.talend.hadoop.distribution.cdh580.jars</module>
         <module>main/plugins/org.talend.hadoop.distribution.custom</module>
         <module>main/plugins/org.talend.hadoop.distribution.emr103</module>
         <module>main/plugins/org.talend.hadoop.distribution.emr240</module>
@@ -148,7 +148,7 @@
         <module>test/plugins/org.talend.hadoop.distribution.cdh540.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.cdh550.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.cdh570.test</module>
-        <module>test/plugins/org.talend.hadoop.distribution.cdh580.test</module>        
+        <module>test/plugins/org.talend.hadoop.distribution.cdh580.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.custom.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr103.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr240.test</module>
@@ -185,6 +185,7 @@
         <module>test/plugins/org.talend.repository.nosql.test</module>
         <module>test/plugins/org.talend.repository.hadoopcluster.configurator.test</module>
         <module>test/plugins/org.talend.repository.hadoopcluster.test</module>
+        <module>test/plugins/org.talend.repository.hdfs.test</module>
     </modules>
     <build>
         <plugins>
