Use proxy repo to talend-update

--- a/main/plugins/org.talend.hadoop.distribution.hdp250.jars/pom.xml
+++ b/main/plugins/org.talend.hadoop.distribution.hdp250.jars/pom.xml
@@ -400,7 +400,7 @@
   <repositories>
     <repository>
       <id>talend_nexus</id>
-      <url>https://talend-update.talend.com/nexus/content/repositories/libraries</url>
+      <url>https://artifacts-oss.talend.com/nexus/content/repositories/talend-update/</url>
     </repository>
   </repositories>
 </project>
