--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,8 @@
         <module>main/plugins/org.talend.hadoop.distribution.cdh580</module>
         <module>main/plugins/org.talend.hadoop.distribution.cdh580.jars</module>
         <module>main/plugins/org.talend.hadoop.distribution.custom</module>
+        <module>main/plugins/org.talend.hadoop.distribution.dataproc11</module>
+        <module>main/plugins/org.talend.hadoop.distribution.dataproc11.jars</module>
         <module>main/plugins/org.talend.hadoop.distribution.emr103</module>
         <module>main/plugins/org.talend.hadoop.distribution.emr240</module>
         <module>main/plugins/org.talend.hadoop.distribution.emr240hive0131</module>
@@ -150,6 +152,7 @@
         <module>test/plugins/org.talend.hadoop.distribution.cdh570.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.cdh580.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.custom.test</module>
+        <module>test/plugins/org.talend.hadoop.distribution.dataproc11.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr103.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr240.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr240hive0131.test</module>
