--- a/main/plugins/org.talend.hadoop.distribution.dataproc11/plugin.xml
+++ b/main/plugins/org.talend.hadoop.distribution.dataproc11/plugin.xml
@@ -581,6 +581,15 @@
         </libraryNeededGroup>     
         
     </extension>
-    
-
+    <extension
+          point="org.talend.core.runtime.classloader_provider">
+      <classloader
+            index="HDFS:GOOGLE_CLOUD_DATAPROC:DATAPROC_1_1"
+            libraries="google-api-services-dataproc-v1-rev42-1.22.0.jar;google-api-client-1.22.0.jar;google-api-client-appengine-1.21.0.jar;google-api-client-servlet-1.21.0.jar;google-http-client-1.21.0.jar;google-http-client-appengine-1.21.0.jar;google-http-client-jackson2-1.22.0.jar;google-oauth-client-1.22.0.jar;google-auth-library-oauth2-http-0.6.0.jar;google-auth-library-credentials-0.6.0.jar;google-http-client-jackson-1.21.0.jar;google-api-services-storage-v1-rev85-1.22.0.jar;google-cloud-storage-0.9.4-beta.jar;google-cloud-core-0.9.4-alpha.jar;google-api-services-dataproc-v1-rev40-1.22.0.jar;jackson-core-2.2.3.jar;jackson-core-asl-1.8.8.jar;jackson-mapper-asl-1.8.8.jar;hadoop-common-2.7.3.jar;hadoop-hdfs-2.7.3.jar;hadoop-auth-2.7.3.jar;avro-1.7.7.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar;commons-logging-1.1.3.jar;commons-lang3-3.3.2.jar;commons-codec-1.4.jar;commons-lang-2.6.jar;commons-configuration-1.6.jar;commons-collections-3.2.2.jar;jackson-core-asl-1.9.13.jar;jackson-mapper-asl-1.9.13.jar;guava-11.0.2.jar">
+      </classloader>
+      <classloader
+            index="HDFS:GOOGLE_CLOUD_DATAPROC:DATAPROC_1_1?USE_KRB"
+            libraries="google-api-services-dataproc-v1-rev42-1.22.0.jar;google-api-client-1.22.0.jar;google-api-client-appengine-1.21.0.jar;google-api-client-servlet-1.21.0.jar;google-api-services-storage-v1-rev85-1.22.0.jar;google-api-services-dataproc-v1-rev40-1.22.0.jar;google-http-client-1.21.0.jar;google-http-client-appengine-1.21.0.jar;google-http-client-jackson-1.21.0.jar;google-http-client-jackson2-1.22.0.jar;google-oauth-client-1.22.0.jar;google-cloud-storage-0.9.4-beta.jar;google-cloud-core-0.9.4-alpha.jar;google-auth-library-credentials-0.6.0.jar;google-auth-library-oauth2-http-0.6.0.jar;gax-0.1.4.jar;json-20151123.jar;guava-19.0.jar;jackson-core-2.2.3.jar;jackson-core-asl-1.8.8.jar;jackson-mapper-asl-1.8.8.jar;hadoop-common-2.7.3.jar;hadoop-hdfs-2.7.3.jar;hadoop-auth-2.7.3.jar;avro-1.7.7.jar;slf4j-api-1.7.10.jar;slf4j-log4j12-1.7.10.jar;commons-logging-1.1.3.jar;commons-lang3-3.3.2.jar;commons-codec-1.4.jar;commons-lang-2.6.jar;commons-configuration-1.6.jar;commons-collections-3.2.2.jar;jackson-core-asl-1.9.13.jar;jackson-mapper-asl-1.9.13.jar;guava-11.0.2.jar;hadoop-conf-kerberos.jar">
+      </classloader>    
+    </extension>
 </plugin>
