--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,8 @@
         <module>main/plugins/org.talend.hadoop.distribution.cdh580spark2</module>
         <module>main/plugins/org.talend.hadoop.distribution.cdh580.jars</module>
         <module>main/plugins/org.talend.hadoop.distribution.cdh580spark2.jars</module>
+        <module>main/plugins/org.talend.hadoop.distribution.cdh5100</module>
+        <module>main/plugins/org.talend.hadoop.distribution.cdh5100.jars</module>
         <module>main/plugins/org.talend.hadoop.distribution.custom</module>
         <module>main/plugins/org.talend.hadoop.distribution.dataproc11</module>
         <module>main/plugins/org.talend.hadoop.distribution.dataproc11.jars</module>
@@ -154,6 +156,7 @@
         <module>test/plugins/org.talend.hadoop.distribution.cdh570.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.cdh580.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.cdh580spark2.test</module>
+        <module>test/plugins/org.talend.hadoop.distribution.cdh5100.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.custom.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.dataproc11.test</module>
         <module>test/plugins/org.talend.hadoop.distribution.emr103.test</module>
