--- a/pom.xml
+++ b/pom.xml
@@ -67,7 +67,7 @@
         <module>main/plugins/org.talend.hadoop.distribution.cdh580.jars</module>
         <module>main/plugins/org.talend.hadoop.distribution.cdh580spark2.jars</module>
         <module>main/plugins/org.talend.hadoop.distribution.cdh5100</module>
-        <module>main/plugins/org.talend.hadoop.distribution.cdh5100.jars</module>
+<!--         <module>main/plugins/org.talend.hadoop.distribution.cdh5100.jars</module>  -->
         <module>main/plugins/org.talend.hadoop.distribution.custom</module>
         <module>main/plugins/org.talend.hadoop.distribution.dataproc11</module>
         <module>main/plugins/org.talend.hadoop.distribution.dataproc11.jars</module>
